--- a/css/styles.css
+++ b/css/styles.css
@@ -52,13 +52,11 @@ html {
   height: 100vh;
   position: fixed;
   /* Overkill yeah. But just in case */
-  /* top: 0;
-  left: 0; */
   background-color: var(--tertiary-bg-color);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 5;
 }
 
 .loader {
@@ -273,9 +271,7 @@ html {
   align-items: center;
   position: fixed;
   top: 0;
-  /* left: 0%; */
   right: 7.5vw;
-  /* z-index: 5; */
   transition: all 0.5s;
   transform: scale(0) rotate(-180deg);
 }
@@ -307,18 +303,13 @@ nav a:hover {
 
 /* other styles */
 
-.my-hamburger {
-  color: var(--tertiary-bg-color);
-  cursor: pointer;
-  z-index: 10;
-}
-
 .navbar-ish {
   flex-basis: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  /* for the hamburger that turns to x. z index is key */
+  /* border: 1px solid red; */
 }
 .social-media {
   flex-basis: 85vh;
@@ -380,7 +371,6 @@ nav a:hover {
   clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
   animation: spinSlow 2s ease-in-out infinite alternate forwards;
   filter: grayscale(80%);
-  /* z-index: 5; */
 }
 
 @keyframes spinSlow {
@@ -408,8 +398,6 @@ nav a:hover {
 }
 
 .nav-logo img {
-  /* border: 1px solid green; */
-  /* z-index: 20000; */
   transform: scale(1);
   transition: all 200ms ease-in;
 }
@@ -682,7 +670,7 @@ nav a:hover {
 
 /* targets the project title div. preceding class name helps with readablility and specificity */
 .grid-portfolio-el .project-title-div {
-  z-index: 1;
+  /* useful */
   position: absolute;
   top: 50%;
   left: 50%;
